--- a/.github/workflows/master_mp2l-devops.yml
+++ b/.github/workflows/master_mp2l-devops.yml
@@ -1,71 +1,39 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - mp2l-devops
+name: Build and Deploy Next.js App to Azure
 
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - main  # Trigger deployment when changes are pushed to the 'main' branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+    - name: Log in to Azure Container Registry (ACR)
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ secrets.AZURE_ACR_SERVER }}
+        username: ${{ secrets.AZURE_ACR_USERNAME }}
+        password: ${{ secrets.AZURE_ACR_PASSWORD }}
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+    - name: Build Docker image for Next.js app
+      run: |
+        docker build -t nextjs-app .
+        docker tag nextjs-app:latest ${{ secrets.AZURE_ACR_SERVER }}/nextjs-app:latest
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+    - name: Push Docker image to ACR
+      run: |
+        docker push ${{ secrets.AZURE_ACR_SERVER }}/nextjs-app:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0EA452C5B52B4012AC2CDBF5CE39C140 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6986CF68951B4B1C966EE87BAB3610A6 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FEAEF41C2FD64474AA8B4AB5C60BC5AF }}
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'mp2l-devops'
-          slot-name: 'Production'
-          package: .
-          
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'mp2l-devops'
+        images: ${{ secrets.AZURE_ACR_SERVER }}/nextjs-app:latest
