--- a/.github/workflows/master_mp2l-devops.yml
+++ b/.github/workflows/master_mp2l-devops.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - mp2l-devops
 
 on:
@@ -16,25 +13,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: npm install, build, and test
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/docker
+          key: ${{ runner.os }}-docker-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
+      - name: Build Docker image
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          docker build -t my-node-app .
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
         with:
-          name: node-app
-          path: release.zip
+          login-server: ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
+
+      - name: Push Docker image to Azure Container Registry
+        run: |
+          docker tag my-node-app ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/my-node-app:latest
+          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/my-node-app:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,26 +50,17 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
+      - name: Log in to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FCD7B61463EF457F91AAD146F4B1C4B1 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_48474C7A22FB45FA9A942FEC929A64F1 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9BAB63352C7449A78B7DE9B322474C2D }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: 'Deploy Docker container to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-container-deploy@v2
         with:
           app-name: 'mp2l-devops'
           slot-name: 'Production'
-          package: .
-          
+          images: ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/my-node-app:latest
