--- a/.github/workflows/master_mp2l-uvt-app.yml
+++ b/.github/workflows/master_mp2l-uvt-app.yml
@@ -1,71 +1,63 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - MP2L-UVT-APP
+name: CI/CD Pipeline for Next.js App
 
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+    - name: Install dependencies
+      run: npm install
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+    - name: Build the app
+      run: npm run build
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+    - name: Run tests
+      run: npm run test
+
+    - name: Build Docker image
+      run: docker build -t project-devops-uvt .
+
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+    - name: Push Docker image to Azure Container Registry
+      run: |
+        docker tag project-devops-uvt:latest ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/project-devops-uvt:latest
+        docker push ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/project-devops-uvt:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E49156A43E4A4B36A8F86D1C08595862 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_76F449D619E64141A0046DB3ADDB669F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0EF104605BE143B2B0FB0911CE019C41 }}
+    - name: Azure CLI setup
+      uses: azure/setup-azure-cli@v1
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'MP2L-UVT-APP'
-          slot-name: 'Production'
-          package: .
-          
+    - name: Login to Azure
+      run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+
+    - name: Deploy to Azure Web App (App Service)
+      run: |
+        az webapp create --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --plan ${{ secrets.AZURE_PLAN_NAME }} --name project-devops-uvt --deployment-container-image-name ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/project-devops-uvt:latest
