--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -5,28 +5,29 @@ on:
     branches:
       - master  
 
+
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@main
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Log in to Azure container registry
-      uses: azure/login@v1
-      with: 
-        login-server: ${{ secrets.ACR_ENDPOINT }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+      - name: Login to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_ENDPOINT }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        push: true 
-        build-args:
-          CONTENTFUL_SPACE_ID=${{secrets.NEXT_PUBLIC_CONTENFUL_SPACE_ID }} 
-          CONTENTFUL_ACCESS_TOKEN=${{secrets.NEXT_PUBLIC_CONTENFUL_ACCESS_TOKEN }} 
-        tags: ${{secrets.ACR_ENDPOINT}}/setchecknextjsapp:latest
-        file: ./Dockerfile
+      - name: Build & Push Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.ACR_ENDPOINT }}/setechnextjsapp:latest
+          build-args: |
+            CONTENTFUL_SPACE_ID=${{ secrets.NEXT_PUBLIC_CONTENTFUL_SPACE_ID }}
+            CONTENTFUL_ACCESS_TOKEN=${{ secrets.NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN }}
 
