--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -4,14 +4,13 @@ on:
   push:
     branches:
       - master  
-
-
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@master
 
       - name: Login to Azure Container Registry
         uses: azure/docker-login@v1
