--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
       - name: Login to Azure Container Registry
         uses: azure/docker-login@v1
