--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - master  
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,3 +31,16 @@ jobs:
             CONTENTFUL_SPACE_ID=${{ secrets.NEXT_PUBLIC_CONTENTFUL_SPACE_ID }}
             CONTENTFUL_ACCESS_TOKEN=${{ secrets.NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN }}
 
+      - name: Deploy to Azure Container App
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az containerapp update \
+              --name your-container-app-name \
+              --resource-group your-resource-group-name \
+              --image ${{ secrets.ACR_ENDPOINT }}/setechnextjsapp:latest
+        env:
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
