--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -7,7 +7,32 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+
+      # Run ESLint
+      - name: Run ESLint
+        run: |
+          npm run lint
+          
   build:
+    needs: lint 
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
