--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  lint:
+  static-code-analysis-lint:
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
@@ -32,7 +32,7 @@ jobs:
           npm run lint
           
   build:
-    needs: lint 
+    needs: static-code-analysis-lint 
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
