--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "export": "next build && next export",
     "lint": "eslint src",
+    "test": "jest",
     "docker:build:dev": "docker build -f Dockerfile.dev -t mp2l-devops:dev .",
     "docker:build:prod": "docker build -f Dockerfile -t mp2l-devops:prod .",
     "docker:run:dev": "docker run -p 3000:3000 -v $(pwd):/app mp2l-devops:dev",
@@ -22,17 +23,24 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5",
     "typescript-eslint": "^8.18.2"
   }
