--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": [
-    "next/babel",
-    "@babel/preset-typescript"
-  ],
-  "plugins": [
-    // Other plugins you might have
-  ]
+  "presets": ["next/babel"]
 }
