Add Snyk security scan to CI workflow and update package.json

--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -26,13 +26,48 @@ jobs:
         run: |
           npm install
 
+      # Run Snyk Security Scan
+      - name: Run Snyk Security Scan
+        uses: snyk/actions/node@v3
+        with:
+          command: test
+
       # Run ESLint
       - name: Run ESLint
         run: |
           npm run lint
 
-  unit-testing:
+  snyk-security-scan:
     needs: static-code-analysis-lint 
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+
+      # Install Snyk CLI
+      - name: Install Snyk CLI
+        run: |
+          npm install -g snyk
+
+      # Run Snyk security test
+      - name: Run Snyk Security Test
+        run: |
+          snyk test --all-projects  # Scans all projects and dependencies
+          
+  unit-testing:
+    needs: snyk-security-scan  
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
