--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next build && next export",
     "lint": "eslint src",
     "test": "jest",
+    "snyk-test": "snyk test --all-projects",
     "docker:build:dev": "docker build -f Dockerfile.dev -t mp2l-devops:dev .",
     "docker:build:prod": "docker build -f Dockerfile -t mp2l-devops:prod .",
     "docker:run:dev": "docker run -p 3000:3000 -v $(pwd):/app mp2l-devops:dev",
@@ -43,6 +44,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "snyk": "^1.1294.3",
     "typescript": "^5",
     "typescript-eslint": "^8.18.2"
   }
