Update workflow dependencies and fix page number in footer

--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -31,7 +31,9 @@ jobs:
         run: |
           npm run lint
 
+
   unit-testing:
+    needs: static-code-analysis-lint
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
@@ -55,7 +57,7 @@ jobs:
           npm run test  # Runs the 'test' script defined in your package.json
 
   build:
-    needs: unit-testing  # Ensures this job runs after unit-testing
+    needs: unit-testing
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
