Add Snyk scanning job to CI workflow and update footer page number

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "15.1.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "snyk": "^1.1294.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
