Update build job dependency to require Snyk scan completion

--- a/.github/workflows/build-deploy-acr.yaml
+++ b/.github/workflows/build-deploy-acr.yaml
@@ -85,7 +85,7 @@ jobs:
           snyk test --all-projects --json
 
   build:
-    needs: unit-testing
+    needs: snyk-scan
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
